fixed font-family of my blog

--- a/src/app.css
+++ b/src/app.css
@@ -10,3 +10,8 @@
 @import '@skeletonlabs/skeleton-svelte';
 
 @custom-variant dark (&:where([data-mode="dark"], [data-mode="dark"] *));
+
+[data-theme="rocket"] {
+    --base-font-family: 'Noto Sans Thai Variable', system-ui, sans-serif;
+    --heading-font-family: 'Noto Sans Thai Variable', system-ui, sans-serif;
+}
